<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".FormActivity" >
	    <TextView
	        android:id="@+id/etq_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/etq_title" 
	        android:background="#0099cc"
	        android:textColor="#FFF"
	        android:textSize="15sp"
	        android:padding="5dp"/>
	    <EditText 
	        android:id="@+id/edt_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/edt_title"
	        android:layout_below="@+id/etq_title"
	        android:layout_marginTop="5dp"/>
	    <TextView
	        android:id="@+id/etq_description"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/etq_description" 
	        android:background="#0099cc"
	        android:textColor="#FFF"
	        android:textSize="15sp"
	        android:padding="5dp"
	        android:layout_marginTop="5dp"
	        android:layout_below="@+id/edt_title"/>
	    <EditText 
	        android:id="@+id/edt_description"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/edt_description"
	        android:layout_below="@+id/etq_description"
	        android:layout_marginTop="5dp" 
	        android:lines="10"
	        android:gravity="top"/>
	    <Button 
	        android:id="@+id/btn_save"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:gravity="center"
	        android:textColor="#FFF"
	        android:text="@string/btn_save"
	        android:layout_below="@+id/edt_description"
	        android:background="#0099cc"
	        android:layout_marginTop="5dp"/>
	</RelativeLayout>
</ScrollView>