<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailActivity" >

    <TextView
        android:id="@+id/etq_title_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etq_title" 
        android:background="#0099cc"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:padding="5dp"/>
    
	<TextView
        android:id="@+id/etq_title_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etq_title_show"
        android:text="@string/app_name" 
        android:textColor="#000"
        android:textSize="15sp"
        android:padding="5dp"
        android:layout_marginTop="5dp" />
	
	<TextView
        android:id="@+id/etq_description_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etq_title_data"
        android:text="@string/etq_title" 
        android:background="#0099cc"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:padding="5dp"
        android:layout_marginTop="5dp"/>
	
	<TextView
        android:id="@+id/etq_description_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etq_description_show"
        android:text="@string/etq_title" 
        android:textColor="#000"
        android:textSize="15sp"
        android:padding="5dp"
        android:layout_marginTop="5dp"/>
	<Button 
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="#FFF"
        android:text="@string/btn_task_done"
        android:layout_below="@+id/etq_description_data"
        android:background="#0099cc"
        android:layout_marginTop="5dp"/>
</RelativeLayout>